<resources>
    <string name="app_name">GeoRedUy</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">GeoRedUy</string>
    
    <!-- Login -->
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
	<string name="password">Password</string>
	<string name="ingresar">Ingresar</string>
	<string name="registrarse">Registrarse en GeoRedUy</string>
	
	<!-- Registro -->
	<string name="title_activity_registro">Registro GeoRedUy</string>
	<string name="nombreUsuario">Usuario</string>
	<string name="email">Email</string>
	<string name="registro">Registro</string>
	<string name="title_activity_menu">Menú GeoRedUy</string>
	<string name="perolataImagen">Ingrese la URL de su foto de Perfil</string>
	<string name="perolataImagenBoton">Click Aqui para cargar Foto</string>
	<string name="errorRegistrando">Error al registrar.</string>	
	
	<string name="titulo_seleccion_tematicas">Seleccione las tematicas a las que desea suscribirse.</string>	
	
	<!-- Contactos -->
	<string name="contactos">Contactos</string>	
	<string name="enviar">Enviar</string>
	<string name="agregarContacto">Agregar amigo</string>
	<string name="eliminarContacto">Eliminar amigo</string>
	
	
	<!-- Chat -->
	<string name="chat">Chat</string>
	<string name="mensajes">Mensajes</string>
	<string name="errorEnvioMensaje">Error al enviar mensaje.</string>
	
	<!-- Sitios -->
	<string name="sitios">Sitios</string>
	<string name="categorias">Categorias</string>
	<string name="checkin">Checkin</string>
	<string name="galeria">Galería</string>
	
	<!-- Perfil -->
	<string name="perfil">Perfil</string>
	
	<!-- Notificaciones -->	
	<string name="notificaciones">Notificaciones</string>
	<string name="activar">Activar</string>
	<string name="desactivar">Desactivar</string>
	<string name="aceptar_amistad">Aceptar</string>
	<string name="rechazar_amistad">Rechazar</string>
	
	<!-- Mapa -->
	<string name="mapa">Mapa</string>
    <string name="ACTIVAR">Activar</string>	
	
	<!-- Generales -->
	<string name="Buscar">Buscar&#8230;</string>	
	<string name="DEVELOPKEYMAPS">06iiXbjK95bcFIBrqWtjn_Hc3LQoOdN7AMhYLBg</string>
	<string name="AUTH_KEY_GCM">AIzaSyA-sjjWHPR2JIHEipdGAFKH8rLcK25Od1A</string>

	
	<!-- ERRORES y MENSAJES-->
	<string name="error_registro">Ocurrió un error al procesar el registro. Intente mas tarde.</string>
	<string name="error_login">Debes registrarte para utilizar esta aplicación. Registrate ahora!</string>
	<string name="error_usuario_inexistente">El usuario no existe.</string>
	<string name="cargando">Cargando&#8230;</string>
	<string name="obteniendo_datos">Obteniendo datos&#8230;</string>
	<string name="notificacionesYaActivadas">Las notificaciones ya se encuentran activas.</string>
	<string name="notificacionesNoActivas">Las notificaciones no se encuentran activas.</string>
	<string name="notificacionesActivadas">Notificaciones activadas correctamente.</string>
	<string name="notificacionesDesactivadas">Notificaciones desactivadas correctamente.</string>
	<string name="errorCargandoImagen">Error cargando la imagen seleccione una url de imagen válida.</string>
	<string name="informacion">Información</string>
	<string name="info_activar_notificacion">Debe activar el servicio de notificaciones para acceder a esta funcionalidad.</string>
	<string name="info_agregar_amistad">Debe ser amigo del contacto seleccionado para acceder a esta funcionalidad.</string>
	<string name="solicitud_amistad_enviada">Solicitud de amistado enviada.</string>
	<string name="amistad_eliminada">Amistad eliminada.</string>
	
</resources>
